--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +23,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      body {
+        margin: 0;
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      }
+      [role="link"]:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+      main {
+        padding: 0.5rem 2rem 2rem;
+        max-width: 40rem;
+        margin: 1rem auto;
+        border: solid 4px #ccc;
+        background: #eee;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
