--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#ff8888" />
+    <meta name="description" content="Exam by @drpicox" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,6 +23,7 @@
     <style>
       body {
         margin: 0;
+        background: #ffe;
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       }
       [role="link"]:hover {
@@ -41,8 +39,8 @@
         padding: 0.5rem 2rem 2rem;
         max-width: 40rem;
         margin: 1rem auto;
-        border: solid 4px #ccc;
-        background: #eee;
+        border: solid 4px #cdc;
+        background: #efe;
       }
       .content + main {
         padding-top: 0;
@@ -52,8 +50,21 @@
         overflow: auto;
         background: rgba(255, 255, 255, 0.5);
       }
+      ul {
+        margin: 0;
+      }
+      button {
+        border-radius: 0;
+        background: #ffe;
+        border: solid 2px #361;
+        cursor: pointer;
+      }
+      button:hover {
+        background: #fff;
+        border-color: black;
+      }
     </style>
-    <title>React App</title>
+    <title>Cities Exam 2021</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
